Update 'go-eyrmzyzs' component image to: quay.io/rhtap_qe/go-eyrmzyzs:ba6da7fce0f3d3fb04ca91e6b8de01d3b03972b1@sha256:25741e9e30828ddedca46f2d184a05169f6d72ef5b0231a0e75c12529829c9f3

--- a/components/go-eyrmzyzs/overlays/development/deployment-patch.yaml
+++ b/components/go-eyrmzyzs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-eyrmzyzs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-eyrmzyzs:ba6da7fce0f3d3fb04ca91e6b8de01d3b03972b1@sha256:25741e9e30828ddedca46f2d184a05169f6d72ef5b0231a0e75c12529829c9f3
+          name: container-image
